@@ -5,15 +5,16 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
-import io.swagger.v3.oas.models.servers.Server; // Server 클래스 임포트
+import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.Collections;
-import java.util.List; // List 임포트
+import java.util.List;
 
 @Configuration
 public class SwaggerConfig {
+
     @Bean
     public OpenAPI boardAPI() {
         Info info = createSwaggerInfo();
@@ -27,20 +28,22 @@ public class SwaggerConfig {
         // 보안 요구사항 설정
         SecurityRequirement securityRequirement = new SecurityRequirement().addList("cookieAuth");
 
-        // --- 이 부분 추가/수정 ---
-        // 서버 URL을 명시적으로 설정 (하드코딩)
-        // application.yml 설정이 적용되지 않는 문제를 우회하기 위함
-        Server server = new Server().url("https://www.hearmeout.kr").description("Production Server");
-        // --- 여기까지 ---
+        // 서버 정보 설정
+        Server prodServer = new Server()
+                .url("https://hearmeout.kr")
+                .description("Production Server");
+
+        Server localServer = new Server()
+                .url("http://localhost:8080")
+                .description("Local Server");
 
         return new OpenAPI()
                 .info(info)
+                .servers(List.of(prodServer, localServer)) // 프로덕션과 로컬 서버 정보 모두 추가
                 .components(new Components().addSecuritySchemes("cookieAuth", apiKey))
-                .security(Collections.singletonList(securityRequirement))
-                .servers(List.of(server)); // 서버 설정 추가
+                .security(Collections.singletonList(securityRequirement));
     }
 
-    // todo: 추후 수정
     private Info createSwaggerInfo() {
         return new Info()
                 .title("똑똑 게시판 API")
